minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__common__tests__edge_pattern_2.snap
---
source: minigu/parser/src/parser/impls/common.rs
expression: parsed
---
- Edge:
    kind: Undirected
    filler:
      variable: ~
      label: ~
      predicate: ~
- start: 0
  end: 4
