minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__common__tests__graph_pattern_quantifier_1.snap
---
source: minigu/parser/src/parser/impls/common.rs
expression: parsed
---
- Asterisk
- start: 0
  end: 1
