minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__common__tests__graph_pattern_quantifier_4.snap
---
source: minigu/parser/src/parser/impls/common.rs
expression: parsed
---
- General:
    lower_bound: ~
    upper_bound:
      - kind: Decimal
        integer: "456"
      - start: 2
        end: 5
- start: 0
  end: 6
