minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__common__tests__path_search_prefix_1.snap
---
source: minigu/parser/src/parser/impls/common.rs
expression: parsed
---
- AllShortest: ~
- start: 0
  end: 12
